--- a/slides-03-graphics/package.json
+++ b/slides-03-graphics/package.json
@@ -17,6 +17,7 @@
     "@local/slide-code": "file:slide-code",
     "@local/slide-combine": "file:slide-combine",
     "@local/slide-image": "file:slide-image",
+    "@local/slide-title": "file:slide-title",
     "@local/slides": "file:slides",
     "es6ify": "^1.4.0",
     "linklocal": "^2.0.0",
