--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,10 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely need to edit after that.
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'jekyll serve'. If you change this file, please restart the server process.
-
-# Site settings
 title: NodeSchool Amsterdam
 email: jpwesselink@gmail.com
-# description: > # this means to ignore newlines until "baseurl:"
-#   Write an awesome description for your new site here. You can edit this
-#   line in _config.yml. It will appear in your document head meta (for
-#   Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://nodeschool.io/amsterdam" # the base hostname & protocol for your site
+description: > #
+  NodeSchool Amsterdam. We host free to attend open source workshops
+  that teach web software skills.
+baseurl: "/amsterdam" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site
 twitter_username: jekyllrb
 github_username:  jekyll
 
